--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,14 @@
 /* styles go here */
+
+.fieldsetBlock {
+  margin-bottom: 20px;
+}
+
+.labelBlock {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.labelBlock:last-child {
+  margin: 0;
+}
